# NDKPostGetByCurl

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/chenzhu/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CommonTools.cpp  CommonTools.h  JniUtils.cpp  JniUtils.h  native-lib.cpp  native-lib.h
app/src/main/java/com/chenzhu/myapplication/: MainActivity.java  NativeMethods.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chenzhu/myapplication/: ExampleUnitTest.java
curl_android_source/jni/: Android.mk  Application.mk
curl_android_source/jni/lib/: curl_config.h
gradle/wrapper/: gradle-wrapper.properties
